Só pra aparecer no index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    aaa
+    <a href="landing-page.html">Abre aqui ó
+        
+    </a>
 </body>
 </html>
