--- a/index.html
+++ b/index.html
@@ -3,11 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="landing-page.css">
 </head>
+
 <body>
-    <a href="landing-page.html">Abre aqui ó
+    <header>
+        <div class="nav">
+            <a href="#" class="logo"><strong>Header Logo</strong></a>
+            <div class="uls">
+            <ul>
+                <li><a href="$" class="link">Header-Link-One</a></li>
+                <li><a href="$" class="link">Header-Link-Two</a></li>
+                <li><a href="$" class="link">Header-Link-Three</a></li>
+            </ul>
+        </div>
+        </div>
+        <div class="info">
+            <div class="info-text">
+            <p class="this"><strong>This website is <br>
+            awesome</strong></p>
+            <p class="website2">This website has some subtext that goes here under the <br>
+                main title. It's a smaller font and the color is lower <br>
+                contrast.</p>
+
+            <button>Sign Up</button>
+        </div>
+
+        <div class="info-img">
+            <div class="img">
+                <div class="teste">
+                <p class="img-b">This is a placeholder for an image.</p>
+                </div>
+            </div>
+        </div>
+
         
-    </a>
+        </div>
+
+    </header>
+
+    <section class="section2">
+        <div class="some">
+            <p class="random">
+                <Strong>Some random information.</Strong>
+            </p>
+        </div>
+
+        <section class="cu">
+            <nav>
+                <div class="prebox1">
+                    <div class="box1"></div>
+                    <p><br>This is some subtext <br> under an illustration <br>or image.</p>
+                </div>
+                <div class="prebox2">
+                    <div class="box2"></div>
+                    <p><br>This is some subtext <br> under an illustration <br>or image.</p>
+                </div>
+                <div class="prebox3">
+                    <div class="box3"></div>
+                    <p><br>This is some subtext <br> under an illustration <br>or image.</p>
+                </div>
+                <div class="prebox4">
+                    <div class="box4"></div>
+                    <p><br>This is some subtext <br> under an illustration <br>or image.</p>
+                </div>
+            </nav>
+        </section>
+        </div>
+
+
+
+
+
+    </section>
+
+    <section class="section3">
+        <div class="insp">
+            <p class="sim">This is an inspiring quote, or a testimonial from a <br>
+                customer. Maybe it's just filling up space, or maybe <br>
+                people will actually read it. Who knows? All I know <br>
+                is that it looks nice.</p><p class="little">
+                    <strong>-Thor, God of Thunder</strong>
+                </p>
+
+            <div class="insp2">
+               
+            </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section4">
+        <div class="blue">
+            <div class="text">
+            <p class="a1"><strong>Call to action! It's time!</strong></p>
+            <p class="a2">Sign up for our product by clicking that button right over there!</p>
+        </div>
+            <div class="sign">
+                <button class="button1">
+                    Sign Up
+                </button>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="divtext">
+            <p class="pdiv">Copyright &#169; The Odin Project 2023</p>
+        </div>
+    </footer>
+
+
 </body>
+
 </html>
