--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="landing-page.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -83,7 +83,8 @@
             <p class="sim">This is an inspiring quote, or a testimonial from a <br>
                 customer. Maybe it's just filling up space, or maybe <br>
                 people will actually read it. Who knows? All I know <br>
-                is that it looks nice.</p><p class="little">
+                is that it looks nice.</p>
+                <p class="little"><br>
                     <strong>-Thor, God of Thunder</strong>
                 </p>
 
